[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
ethers = {version = "1.0.2" }
serde_json = "1.0"
serde = "1.0.159"
struct_field_names_as_array = { path = "./libs/struct_field_names_as_array" }

[dev-dependencies]
pretty_assertions = "1.3.0"
