[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
ethers = {version = "1.0.2" }
serde_json = "1.0"
serde = "1.0.159"
struct_field_names_as_array = { path = "./libs/struct_field_names_as_array" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.3.1"
strum = "0.24"
strum_macros = "0.24"
futures-util = "0.3"
chrono = "0.4.24"

[dev-dependencies]
pretty_assertions = "1.3.0"
